# mesaddk18

./: meson.build  meson_options.txt
.gitlab-ci/common/: init-stage2.sh
debian/: changelog  control  libgbm1.symbols  libgl1-mesa-dri.install  libglx-mesa0.symbols  mesa-vulkan-drivers.install  rules
docs/drivers/: zink.rst
docs/gallium/: context.rst
include/GL/internal/: dri_interface.h
include/drm-uapi/: drm_fourcc.h
src/: meson.build
src/compiler/nir/: meson.build  nir.h
src/egl/: meson.build
src/egl/drivers/dri2/: egl_dri2.c  egl_dri2.h  platform_drm.c  platform_null.c  platform_wayland.c  platform_x11.c  platform_x11_dri3.c
src/egl/drivers/haiku/: egl_haiku.cpp
src/egl/main/: eglapi.c  eglconfig.c  eglconfig.h  eglcontext.c  eglcurrent.h  egldisplay.c  egldisplay.h  egldriver.h  eglimage.c  eglimage.h
src/egl/wayland/wayland-drm/: meson.build  wayland-drm.pc.in
src/gallium/: meson.build
src/gallium/drivers/pvr/: meson.build
src/gallium/drivers/pvr_alias/: meson.build
src/gallium/drivers/zink/: VP_ZINK_requirements.json  zink_batch.c  zink_compiler.c  zink_context.c  zink_descriptors.c  zink_device_info.py  zink_kopper.c  zink_pipeline.c  zink_program.c  zink_program.h  zink_resource.c  zink_screen.c  zink_shader_keys.h  zink_surface.c  zink_types.h
src/gallium/frontends/dri/: dri2.c  dri_query_renderer.c  dri_query_renderer.h  dri_screen.c  dri_screen.h  dri_util.c  dri_util.h  drisw.c  kopper.c  meson.build
src/gallium/frontends/pvr/: dri_support.h  mesa_context.c  meson.build  pvrcb.c  pvrcompat.c  pvrdri.c  pvrdri.h  pvrdri_support.h  pvrext.c  pvrmesa.h  pvrutil.c
src/gallium/include/pipe/: p_format.h
src/gallium/targets/dri/: meson.build  target.c
src/gbm/main/: gbm.c  gbm.h  gbm_abi_check.c  gbm_backend_abi.h
src/glx/: dri3_glx.c  dri3_priv.h  meson.build
src/loader/: loader_dri3_helper.c  loader_dri3_helper.h
src/mesa/main/: fbobject.c  format_info.py  formats.c  formats.csv  formats.h  genmipmap.c  glconfig.h  queryobj.c  version.c
src/pvr/: meson.build
src/pvr/wsi/: meson.build  pvr_mesa_wsi_interface.h  pvr_wsi.c  pvr_wsi.h  pvr_wsi_display.c  pvr_wsi_wayland.c  pvr_wsi_x11.c
src/vulkan/wsi/: meson.build  wsi_common.c  wsi_common.h  wsi_common_display.c  wsi_common_display.h  wsi_common_drm.c  wsi_common_private.h  wsi_common_wayland.c  wsi_common_win32.c  wsi_common_x11.c
(+6 files in other folders)
